# lab-watcher

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
cli/: Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
cli/src/main/java/com/labwatcher/: App.java
cli/src/main/java/com/labwatcher/cmd/: InferSchemaCommand.java  InitCommand.java  StatusCommand.java  ValidateCommand.java  WatchCommand.java
cli/src/main/java/com/labwatcher/config/: AppConfig.java  ConfigLoader.java
cli/src/main/java/com/labwatcher/dispatch/: ConsoleDispatcher.java  Dispatcher.java  NotionDispatcher.java  SlackDispatcher.java
cli/src/main/resources/: default-config.toml  logback.xml
cli/src/test/java/com/labwatcher/: ConfigLoaderTest.java  EngineAdapterTest.java  HashUtilTest.java  InferSchemaCommandTest.java  NotionFormatterTest.java  SlackFormatterTest.java  SqliteStateRepositoryTest.java
dashboard/: Dockerfile  README.md  jest.config.js  package.json  tsconfig.json
dashboard/public/: app.js  index.html  style.css
dashboard/src/: db.ts  server.ts  types.ts
dashboard/src/routes/: api.ts  health.ts  metrics.ts
dashboard/src/ws/: liveUpdates.ts
dashboard/tests/: api.test.ts
docker/: lab-watcher.toml
engine/: CMakeLists.txt  Dockerfile  README.md
engine/bench/: bench_parser.cpp
engine/include/valengine/: parser.hpp  schema.hpp  stats.hpp  types.hpp  validator.hpp
engine/jni/: json_writer.hpp  valengine_jni.cpp
engine/src/: parser.cpp  schema.cpp  stats.cpp  types.cpp  validator.cpp
engine/tests/: test_fuzz.cpp  test_parser.cpp  test_schema.cpp  test_stats.cpp  test_validator.cpp
sample-data/: bad_missing_headers.csv  bad_out_of_range.csv  bad_wrong_types.csv  mea_pilot_run_001.csv
schemas/: mea-pilot-plant.toml
(+15 files in other folders)
